--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,10 @@
 }
 :root{
     --content-text-color:#fff;
+
 }
+
+
 .hero{
     height: 100vh;
     width: 100%;
@@ -312,11 +315,14 @@ footer p:nth-child(1){
 /* MEDIA QUERIES */
 
 @media screen and (max-width: 1000px) and (min-width:300px){
-    .hero{
+
+    
+    body{
     height:100vh;
-    width:110%;
+    width:auto;
     background-image: url(img/bg.jpg);
     background-size: cover;
+    background-repeat: no-repeat;
     background-position: center;
 
     }
@@ -395,7 +401,7 @@ footer p:nth-child(1){
     h1{
         color: var(--content-text-color);
         margin: 20px 0px 20px;
-        font-size: 65px;
+        font-size: 55px;
         margin-bottom:5px ;
     }
     
@@ -411,7 +417,7 @@ footer p:nth-child(1){
     }
     
     .newsletter form{
-        width: 330px;
+        width: 310px;
         max-width: 100%;
         position: relative;
     
@@ -440,7 +446,11 @@ footer p:nth-child(1){
         top: 6px;
         right: 6px;
     }
-   
+
+   section{
+    width: 100%;
+
+   }
     .about{
         width: 110%;
         padding: 100px 0px;
@@ -450,7 +460,7 @@ footer p:nth-child(1){
     .about img{
         height: 360px;
         width: 300px;
-        margin: 25px 25px 35px 0;
+        margin: 25px 25px 35px 15px;
     }
     
     .about-text{
@@ -564,11 +574,14 @@ footer p:nth-child(1){
         color: #f9004d;
     }
     .contact-me{
-    width:100%;
+    width:110%;
     height:290px;
     }
     .contact-me p{
         font-size: 25px;
         text-align: center;
+    }
+    footer{
+        width: 110%;
     }
 }
