changed nav menu layout when in mobile view

--- a/styles.css
+++ b/styles.css
@@ -173,7 +173,7 @@ button{
     border-radius: 30px;
     transition: 2s;
 }
-button:hover{
+.button:hover{
     background-color: transparent;
     border: 2px solid #f9004d;
     cursor: pointer;
